stasis-macros/tests/ui/fail_output_schema_requires_jsonschema.stderr
error[E0277]: the trait bound `Output: JsonSchema` is not satisfied
  --> tests/ui/fail_output_schema_requires_jsonschema.rs:24:82
   |
24 | async fn fail_output_schema(input: Input) -> fake_stasis::domain::errors::Result<Output> {
   |                                                                                  ^^^^^^ unsatisfied trait bound
   |
help: the trait `JsonSchema` is not implemented for `Output`
  --> tests/ui/fail_output_schema_requires_jsonschema.rs:15:1
   |
15 | struct Output {
   | ^^^^^^^^^^^^^
   = help: the following other types implement trait `JsonSchema`:
             &'a T
             &'a mut T
             ()
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
           and $N others
note: required by a bound in `__assert_output_schema_traits`
  --> tests/ui/fail_output_schema_requires_jsonschema.rs:19:1
   |
19 | / #[stasis_tool(
20 | |     name = "fail_output_schema",
21 | |     output_schema = true,
22 | |     crate_path = "crate::support::fake_stasis"
23 | | )]
   | |__^ required by this bound in `__assert_output_schema_traits`
   = note: this error originates in the attribute macro `stasis_tool` (in Nightly builds, run with -Z macro-backtrace for more info)
